# pymdownx-mahjong

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs-build.yml  pages.yml  pypi-publish.yml  pypi.yml  release-assets.yml
docs/: changelog.md  examples.md  index.md  license.md
docs/css/: mahjong.css
docs/stylesheets/: mahjong.css  simpleicons.css
pymdownx_mahjong/: __init__.py  extension.py  inline.py  parser.py  renderer.py  superfences.py  tiles.py  utils.py
pymdownx_mahjong/assets/: README.md
pymdownx_mahjong/css/: mahjong.css
tests/: __init__.py  test_extension.py  test_parser.py  test_renderer.py  test_superfences.py  test_utils.py
